--- a/index.html
+++ b/index.html
@@ -345,7 +345,45 @@
                 </div>
             </div>
         </div>
+<!-- blog -->
+ <div class="blogs">
+    <div class="main-content">
+        <div class="blog-top">
+            <h2 class="heading-lv2">Our blog</h2>
+            <p class="desc">Read our regular travel blog and know the latest update of tour and travel</p>
+        </div>
+        <div class="blog-list">
+            <!-- item1  -->
+            <div class="item">
+      <a href="#!"><img src="./assets/img/anha 1.jpg" alt="" class="thumb"></a>
+                <div class="info">
+                    <span class="date">21 November 2021</span>
+                   <a href="#!"> <h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
+                    <a href="" class="btn">Read More</a>
+                </div>
+            </div>
+            <!-- item2 -->
+                 <div class="item">
+      <a href="#!"><img src="./assets/img/anha 2.jpg" alt="" class="thumb"></a>
+               <div class="info">
+                    <span class="date">21 November 2021</span>
+                   <a href="#!"> <h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
+                    <a href="" class="btn">Read More</a>
+               </div>
+            </div>
+            <!-- item3 -->
+                 <div class="item">
+      <a href="#!"><img src="./assets/img/learn2.jpg" alt="" class="thumb"></a>
+               <div class="info">
+                    <span class="date">21 November 2021</span>
+                   <a href="#!"> <h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
+                    <a href="" class="btn">Read More</a>
+               </div>
+            </div>
+        </div>
 
+    </div>
+ </div>
     </div>
     </div>
 </body>
