--- a/index.html
+++ b/index.html
@@ -380,12 +380,122 @@
                     <a href="" class="btn">Read More</a>
                </div>
             </div>
+            <!-- item4  -->
+            <div class="item">
+      <a href="#!"><img src="./assets/img/anha 1.jpg" alt="" class="thumb"></a>
+                <div class="info">
+                    <span class="date">21 November 2021</span>
+                   <a href="#!"> <h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
+                    <a href="" class="btn">Read More</a>
+                </div>
+            </div>
+            <!-- item5 -->
+                 <div class="item">
+      <a href="#!"><img src="./assets/img/anha 2.jpg" alt="" class="thumb"></a>
+               <div class="info">
+                    <span class="date">21 November 2021</span>
+                   <a href="#!"> <h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
+                    <a href="" class="btn">Read More</a>
+               </div>
+            </div>
+            <!-- item6 -->
+                 <div class="item">
+      <a href="#!"><img src="./assets/img/learn2.jpg" alt="" class="thumb"></a>
+               <div class="info">
+                    <span class="date">21 November 2021</span>
+                   <a href="#!"> <h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
+                    <a href="" class="btn">Read More</a>
+               </div>
+            </div>
         </div>
-
+<div class="dots">
+    <span class="dot"></span>
+    <span class="dot active"></span>
+    <span class="dot"></span>
+</div>
     </div>
  </div>
     </div>
-    </div>
+    <!-- footer -->
+     <footer class="footer">
+        <div class="main-content">
+            <div class="row">
+                <!-- colum1 -->
+                <div class="column">
+                   <img src="./assets/img/Lesson..svg" alt="lesson." class="logo">
+                   <p class="desc">Need to help for your dream Career? trust us. With Lesson, study becomes a lot easier with us.</p>
+                   <div class="social">
+                    <a href="">
+                        <img src="./assets/icon/Twitter.svg" alt="Twitter.svg"" class="icon">
+                    </a>
+                    <a href="">
+                        <img src="./assets/icon/Facebook.svg" alt="Facebook.svg" class="icon">
+                    </a>
+                    <a href="">
+                        <img src="./assets/icon/Linkedin.svg" alt="linkedin" class="icon">
+                    </a>
+                    <a href="">
+                        <img src="./assets/icon/Instagram.svg" alt="Instagram" class="icon">
+                    </a>
+                   </div>
+                </div>
+                <!-- column2 -->
+                <div class="column">
+                    <h3 class="title">Company</h3>
+                    <ul class="list">
+                        <li>
+                            <a href="#!">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#!">Features</a>
+                        </li>
+                        <li>
+                            <a href="#!">Our Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#!">Latest News</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- column3 -->
+                <div class="column">
+                    <h3 class="title">Support</h3>
+                    <ul class="list">
+                        <li>
+                            <a href="#!">FAQ’s</a>
+                        </li>
+                        <li>
+                            <a href="#!">Terms & Conditions</a>
+                        </li>
+                        <li>
+                            <a href="#!">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#!">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- column4 -->
+                <div class="column">
+                    <h3 class="title">Address</h3>
+                    <ul class="list">
+                        <li>
+                            <a href="#!"><strong>Location:</strong> 27 Division St, New York, NY 10002, USA</a>
+                        </li>
+                        <li>
+                            <a href="#!"><strong>Email:</strong> email@gmail.com</a>
+                        </li>
+                        <li>
+                            <a href="#!"><strong>Phone:</strong> + 000 1234 567 890</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>Copyright ©2022 webdesign.gdn All rights reserved</p>
+            </div>
+        </div>
+     </footer>
 </body>
 
 </html>
